crates/valen-parser/tests/snapshots/parser__loop_with_break_value.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"fn f() -> Int { loop { break 42; } }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            visibility: Internal,
            name: "f",
            generics: [],
            params: [],
            return_type: Some(
                Path(
                    TypePath {
                        segments: [
                            TypePathSegment {
                                name: "Int",
                                generics: [],
                                span: Span {
                                    start: 10,
                                    end: 13,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ],
                        span: Span {
                            start: 10,
                            end: 13,
                            file_id: FileId(
                                0,
                            ),
                        },
                    },
                ),
            ),
            body: Some(
                Block {
                    stmts: [],
                    tail: Some(
                        Loop(
                            LoopExpr {
                                body: Block {
                                    stmts: [
                                        ExprSemi(
                                            Break(
                                                BreakExpr {
                                                    value: Some(
                                                        Literal(
                                                            Int(
                                                                42,
                                                                Span {
                                                                    start: 29,
                                                                    end: 31,
                                                                    file_id: FileId(
                                                                        0,
                                                                    ),
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                    span: Span {
                                                        start: 23,
                                                        end: 31,
                                                        file_id: FileId(
                                                            0,
                                                        ),
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                    tail: None,
                                    span: Span {
                                        start: 21,
                                        end: 34,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                                span: Span {
                                    start: 16,
                                    end: 34,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 14,
                        end: 36,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            span: Span {
                start: 0,
                end: 36,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
